--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
     <title>Охотоники за привидениями: Наследники</title>
 
     <!-- Bootstrap core CSS -->
-    <link rel="stylesheet" href="/css/bootstrap-grid.min.css">
+    <!-- <link rel="stylesheet" href="/css/bootstrap-grid.min.css"> -->
 
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+    <header class="header">
+        <img src="image/logo.png" alt="Logo: film" "class=" logo"></img>
+        <input type="text" class="search-input" placeholder="Поиск по фильмам...">
 
+        <nav class="navigation">
+            <a href="#" class="navigation-link">Фильмы</a>
+            <a href="#" class="navigation-link">ТВ</a>
+            <a href="#" class="navigation-link">Новости</a>
+            <a href="#" class="navigation-link">О сервисе</a>
+        </nav>
 
-
+        <div class="button-group">
+            <button class="button">Регистрация</button>
+            <button class="button">Войти</button>
+        </div>
+    </header>
 </body>
 
 </html>
