--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Охотоники за привидениями: Наследники</title>
-
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet">
     <!-- Bootstrap core CSS -->
     <!-- <link rel="stylesheet" href="/css/bootstrap-grid.min.css"> -->
 
     <!-- Custom styles for this template -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
