--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </nav>
 
         <div class="button-group">
-            <button class="button">Регистрация</button>
-            <button class="button">Войти</button>
+            <button class="button sign-up">Регистрация</button>
+            <button class="button login">Войти</button>
         </div>
     </header>
 </body>
