--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <header class="header">
         <img src="image/logo.png" alt="Logo: film" "class=" logo"></img>
+        <div class="line"></div>
         <input type="text" class="search-input" placeholder="Поиск по фильмам...">
 
         <nav class="navigation">
