--- a/index.html
+++ b/index.html
@@ -33,6 +33,48 @@
             <button class="button login">Войти</button>
         </div>
     </header>
+
+    <div class="film">
+        <div class="container">
+            <div class="film-wrapper">
+                <div class="film-trailer">
+                    <img src="image/promo.png" alt="poster" class="poster">
+                    <button class="trailer-button">
+                        <img class="play-icon" src="image/play.svg" alt="play-button">
+                        <span class="trailer-button-text">Посмотреть трейлер</span>
+                    </button>
+                </div>
+                <!-- /.heto-trailer -->
+                <div class="film-description">
+                    <h1 class="film-title">Охотники за привидениями: <br />Наследники</h1>
+                    <!-- /.film-title -->
+                    <span class="film-subtitle">Ghostbusters: Afterlife</span>
+                    <!-- /.film-subtitle -->
+                    <p class="film-description">
+                        Мать-одиночка с двумя детьми-подростками селится на старой ферме в Оклахоме, полученной в
+                        наследство от отца, которого она не знала. Дети пытаются больше узнать о своем деде и находят
+                        автомобиль Ecto-1, принадлежавший знаменитым охотникам за привидениями.
+                    </p>
+                    <!-- /.film-description -->
+                    <div class="about-film">
+                        <div class="left-side">
+                            <span class="about-text">
+                                <strong class="about-bold">Режиссер</strong>
+                                <span class="about-regular">Джейсон Райтман</span>
+                            </span>
+                        </div>
+                        <!-- /.left-side -->
+                        <div class="right-side"></div>
+                        <!-- /.right-side -->
+                    </div>
+                    <!-- /.about-film -->
+                </div>
+                <!-- /.film-description -->
+            </div>
+            <!-- /.film-wrapper -->
+        </div>
+        <!-- /.container -->
+    </div>
 </body>
 
 </html>
