--- a/index.html
+++ b/index.html
@@ -62,9 +62,30 @@
                                 <strong class="about-bold">Режиссер</strong>
                                 <span class="about-regular">Джейсон Райтман</span>
                             </span>
+                            <span class="about-text">
+                                <strong class="about-bold">Сценарий</strong>
+                                <span class="about-regular">Дэн Эйкройд</span>
+                            </span>
+                            <span class="about-text">
+                                <strong class="about-bold">Премьера</strong>
+                                <span class="about-regular">09.05.2020 (EU)</span>
+                            </span>
                         </div>
                         <!-- /.left-side -->
-                        <div class="right-side"></div>
+                        <div class="right-side">
+                            <span class="about-text">
+                                <strong class="about-bold">Бюджет</strong>
+                                <span class="about-regular">1 000 000 $</span>
+                            </span>
+                            <span class="about-text">
+                                <strong class="about-bold">Кинопрокат</strong>
+                                <span class="about-regular">SPPR</span>
+                            </span>
+                            <span class="about-text">
+                                <strong class="about-bold">Премьера в РФ</strong>
+                                <span class="about-regular">09.07.2020 (РФ)</span>
+                            </span>
+                        </div>
                         <!-- /.right-side -->
                     </div>
                     <!-- /.about-film -->
