--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="film-trailer">
                     <img src="image/promo.png" alt="poster" class="poster">
                     <button class="trailer-button">
-                        <img class="play-icon" src="image/play.svg" alt="play-button">
+                        <img class="trailer-button-icon" src="image/play.svg" alt="play-button">
                         <span class="trailer-button-text">Посмотреть трейлер</span>
                     </button>
                 </div>
@@ -51,7 +51,7 @@
                     <span class="film-subtitle">Ghostbusters: Afterlife</span>
                     <!-- /.film-subtitle -->
                     <p class="film-description">
-                        Мать-одиночка с двумя детьми-подростками селится на старой ферме в Оклахоме, полученной в
+                        Мать-одиночка с двумя детьми-подростками селится на старой ферме в&nbsp;Оклахоме, полученной в
                         наследство от отца, которого она не знала. Дети пытаются больше узнать о своем деде и находят
                         автомобиль Ecto-1, принадлежавший знаменитым охотникам за привидениями.
                     </p>
