start block rating

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </button>
                 </div>
                 <!-- /.heto-trailer -->
-                <div class="film-description">
+                <div class="film-text">
                     <h1 class="film-title">Охотники за привидениями: <br />Наследники</h1>
                     <!-- /.film-title -->
                     <span class="film-subtitle">Ghostbusters: Afterlife</span>
@@ -82,15 +82,29 @@
                                 <span class="about-regular">SPPR</span>
                             </span>
                             <span class="about-text">
-                                <strong class="about-bold">Премьера в РФ</strong>
+                                <strong class="about-bold">Премьера</strong>
                                 <span class="about-regular">09.07.2020 (РФ)</span>
                             </span>
                         </div>
                         <!-- /.right-side -->
                     </div>
                     <!-- /.about-film -->
+                    <div class="rating">
+                        <div class="rating-conter">92%</div>
+                        <!-- /.rating-conter -->
+                        <div class="rating-description">
+                            <h3 class="rating-title">Рейтинг зрителей</h3>
+                            <span class="rating-text">Средняя оценка: <strong
+                                    class="rating-text-bold">4,5/5</strong></span> <!-- /.rating-text -->
+                            <span class="rating-text">Всего голосов: <strong class="rating-text-bold">4
+                                    350</strong></span> <!-- /.rating-text -->
+                            <!-- /.rating-title -->
+                        </div>
+                        <!-- /.rating-description -->
+                    </div>
+                    <!-- /.film-rating -->
                 </div>
-                <!-- /.film-description -->
+                <!-- /.film-text -->
             </div>
             <!-- /.film-wrapper -->
         </div>
