--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                     </div>
                     <!-- /.about-film -->
                     <div class="rating">
-                        <div class="rating-conter">92%</div>
+                        <div class="rating-counter">92%</div>
                         <!-- /.rating-conter -->
                         <div class="rating-description">
                             <h3 class="rating-title">Рейтинг зрителей</h3>
