--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
     </header>
 
-    <div class="film">
+    <section class="film">
         <div class="container">
             <div class="film-wrapper">
                 <div class="film-trailer">
@@ -109,7 +109,22 @@
             <!-- /.film-wrapper -->
         </div>
         <!-- /.container -->
-    </div>
+    </section>
+    <!-- /. film -->
+
+    <section class="cast">
+        <div class="container">
+            <div class="tabs">
+                <h2 class="section-title active">Актёры</h2>
+                <!-- /.section-title -->
+                <h2 class="section-title">Создатели</h2>
+                <!-- /.section-title -->
+            </div>
+            <!-- /.tabs -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.cast -->
 </body>
 
 </html>
