--- a/index.html
+++ b/index.html
@@ -121,6 +121,97 @@
                 <!-- /.section-title -->
             </div>
             <!-- /.tabs -->
+            <div class="tabs-content">
+                <div class="card">
+                    <img src="image/1.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/2.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/3.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/4.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/5.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/6.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/7.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/8.png" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Кэрри Кун</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Carrie Coon</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.tabs-content -->
         </div>
         <!-- /.container -->
     </section>
