--- a/index.html
+++ b/index.html
@@ -136,9 +136,9 @@
                 <div class="card">
                     <img src="image/2.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Билл Мюррей</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Bill Murray</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -147,9 +147,9 @@
                 <div class="card">
                     <img src="image/3.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Пол Радд</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Paul Rudd</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -158,9 +158,9 @@
                 <div class="card">
                     <img src="image/4.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Энни Поттс</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Annie Potts</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -169,9 +169,9 @@
                 <div class="card">
                     <img src="image/5.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">МакКенна Грейс</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Mckenna Grace</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -180,9 +180,9 @@
                 <div class="card">
                     <img src="image/6.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Дэн Эйкройд</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Dan Aykroyd</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -191,9 +191,9 @@
                 <div class="card">
                     <img src="image/7.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Эрни Хадсон</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Ernie Hudson</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
@@ -202,9 +202,9 @@
                 <div class="card">
                     <img src="image/8.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
-                        <h3 class="name">Кэрри Кун</h3>
+                        <h3 class="name">Финн Вулфард</h3>
                         <!-- /.name -->
-                        <div class="span en-name">Carrie Coon</div>
+                        <div class="span en-name">Finn Wolfhard</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
