--- a/index.html
+++ b/index.html
@@ -216,6 +216,45 @@
         <!-- /.container -->
     </section>
     <!-- /.cast -->
+
+    <section class="news">
+        <div class="container">
+            <h2 class="section-title section-news-title">Новости по теме</h2>
+            <div class="news-cards">
+                <div class="news-card">
+                    <span class="news-date">31 марта 2020</span>
+                    <!-- /.date -->
+                    <h3 class="news-title">«Морбиуса» и «Охотников за привидениями» перенесли на следующий год</h3>
+                    <!-- /.news-title -->
+                </div>
+                <!-- /.news-card -->
+                <div class="news-card">
+                    <span class="news-date">9 декабря 2019</span>
+                    <!-- /.date -->
+                    <h3 class="news-title">Наследники: Вышел дебютный трейлер новых «Охотников за привидениями»</h3>
+                    <!-- /.news-title -->
+                </div>
+                <!-- /.news-card -->
+                <div class="news-card">
+                    <span class="news-date">11 ноября 2019</span>
+                    <!-- /.date -->
+                    <h3 class="news-title">Новые «Охотники за привидениями» обзавелись названием</h3>
+                    <!-- /.news-title -->
+                </div>
+                <!-- /.news-card -->
+                <div class="news-card">
+                    <span class="news-date">19 октября 2019</span>
+                    <!-- /.date -->
+                    <h3 class="news-title">Завершились съёмки новых «Охотников за привидениями»</h3>
+                    <!-- /.news-title -->
+                </div>
+                <!-- /.news-card -->
+            </div>
+            <!-- /.news-cards -->
+        </div>
+        <!-- /.container -->
+    </section>
+    <!-- /.news -->
 </body>
 
 </html>
