--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header class="header">
-        <img src="image/logo.png" alt="Logo: film" "class=" logo"></img>
+        <img src="image/logo.png" alt="Logo: film" class="header-logo"></img>
         <div class="line"></div>
         <input type="text" class="search-input" placeholder="Поиск по фильмам...">
 
