--- a/index.html
+++ b/index.html
@@ -32,6 +32,17 @@
             <button class="button sign-up">Регистрация</button>
             <button class="button login">Войти</button>
         </div>
+        <div class="mobile-buttons">
+            <button class="search-button">
+                <img src="image/search-icon.svg" alt="search">
+            </button>
+            <button class="m-menu-button">
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+            </button>
+        </div>
+        <!-- /.mobile-buttons -->
     </header>
 
     <section class="film">
