--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- <link rel="stylesheet" href="/css/bootstrap-grid.min.css"> -->
 
     <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
 </head>
@@ -266,6 +267,11 @@
         <!-- /.container -->
     </section>
     <!-- /.news -->
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 
 </html>
