--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <!-- <link rel="stylesheet" href="/css/bootstrap-grid.min.css"> -->
 
     <!-- Custom styles for this template -->
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/normalize.css">
 </head>
 
 <body>
@@ -51,10 +51,10 @@
             <div class="film-wrapper">
                 <div class="film-trailer">
                     <img src="image/promo.png" alt="poster" class="poster">
-                    <button class="trailer-button">
+                    <a data-fancybox href="https://www.youtube.com/watch?v=ahZFCF--uRY&t=6s" class="trailer-button">
                         <img class="trailer-button-icon" src="image/play.svg" alt="play-button">
                         <span class="trailer-button-text">Посмотреть трейлер</span>
-                    </button>
+                    </a>
                 </div>
                 <!-- /.heto-trailer -->
                 <div class="film-text">
