--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
     <header class="header">
         <img src="image/logo.png" alt="Logo: film" class="header-logo"></img>
         <div class="line"></div>
-        <input type="text" class="search-input" placeholder="Поиск по фильмам...">
 
-        <nav class="navigation">
-            <a href="#" class="navigation-link">Фильмы</a>
-            <a href="#" class="navigation-link">ТВ</a>
-            <a href="#" class="navigation-link">Новости</a>
-            <a href="#" class="navigation-link">О сервисе</a>
-        </nav>
+        <div class="m-menu">
+            <input type="text" class="search-input" placeholder="Поиск по фильмам...">
 
-        <div class="button-group">
-            <button class="button sign-up">Регистрация</button>
-            <button class="button login">Войти</button>
+            <nav class="navigation">
+                <a href="#" class="navigation-link">Фильмы</a>
+                <a href="#" class="navigation-link">ТВ</a>
+                <a href="#" class="navigation-link">Новости</a>
+                <a href="#" class="navigation-link">О сервисе</a>
+            </nav>
+
+            <div class="button-group">
+                <button class="button sign-up">Регистрация</button>
+                <button class="button login">Войти</button>
+            </div>
         </div>
+        <!-- /.m-menu -->
+
         <div class="mobile-buttons">
             <button class="search-button">
                 <img src="image/search-icon.svg" alt="search">
