--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Custom styles for this template -->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/jquery.fancybox.min.css">
+    <link rel="stylesheet" href="css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -275,6 +276,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"></script>
     <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/swiper.min.js"></script>
     <script src="js/main.js"></script>
 
 </body>
