--- a/index.html
+++ b/index.html
@@ -238,37 +238,54 @@
     <section class="news">
         <div class="container">
             <h2 class="section-title section-news-title">Новости по теме</h2>
-            <div class="news-cards">
-                <div class="news-card">
-                    <span class="news-date">31 марта 2020</span>
-                    <!-- /.date -->
-                    <h3 class="news-title">«Морбиуса» и «Охотников за привидениями» перенесли на следующий год</h3>
-                    <!-- /.news-title -->
+            <!-- Slider main container -->
+            <div class="swiper-container">
+                <!-- Additional required wrapper -->
+                <div class="swiper-wrapper">
+                    <!-- Slides -->
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">31 марта 2020</span>
+                            <!-- /.date -->
+                            <h3 class="news-title">«Морбиуса» и «Охотников за привидениями» перенесли на следующий год
+                            </h3>
+                            <!-- /.news-title -->
+                        </div>
+                        <!-- /.news-card -->
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">9 декабря 2019</span>
+                            <!-- /.date -->
+                            <h3 class="news-title">Наследники: Вышел дебютный трейлер новых «Охотников за привидениями»
+                            </h3>
+                            <!-- /.news-title -->
+                        </div>
+                        <!-- /.news-card -->
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">11 ноября 2019</span>
+                            <!-- /.date -->
+                            <h3 class="news-title">Новые «Охотники за привидениями» обзавелись названием</h3>
+                            <!-- /.news-title -->
+                        </div>
+                        <!-- /.news-card -->
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="news-card">
+                            <span class="news-date">19 октября 2019</span>
+                            <!-- /.date -->
+                            <h3 class="news-title">Завершились съёмки новых «Охотников за привидениями»</h3>
+                            <!-- /.news-title -->
+                        </div>
+                        <!-- /.news-card -->
+                    </div>
+                    <!-- swiper slider -->
                 </div>
-                <!-- /.news-card -->
-                <div class="news-card">
-                    <span class="news-date">9 декабря 2019</span>
-                    <!-- /.date -->
-                    <h3 class="news-title">Наследники: Вышел дебютный трейлер новых «Охотников за привидениями»</h3>
-                    <!-- /.news-title -->
-                </div>
-                <!-- /.news-card -->
-                <div class="news-card">
-                    <span class="news-date">11 ноября 2019</span>
-                    <!-- /.date -->
-                    <h3 class="news-title">Новые «Охотники за привидениями» обзавелись названием</h3>
-                    <!-- /.news-title -->
-                </div>
-                <!-- /.news-card -->
-                <div class="news-card">
-                    <span class="news-date">19 октября 2019</span>
-                    <!-- /.date -->
-                    <h3 class="news-title">Завершились съёмки новых «Охотников за привидениями»</h3>
-                    <!-- /.news-title -->
-                </div>
-                <!-- /.news-card -->
+                <!-- slider-wraper -->
             </div>
-            <!-- /.news-cards -->
+            <!-- slider-contaienr -->
         </div>
         <!-- /.container -->
     </section>
