next arrow slider

--- a/index.html
+++ b/index.html
@@ -284,6 +284,9 @@
                     <!-- swiper slider -->
                 </div>
                 <!-- slider-wraper -->
+                <button class="button-next">
+                    <img src="image/arrow.svg" alt="arrow">
+                </button> <!-- /.button-next -->
             </div>
             <!-- slider-contaienr -->
         </div>
