--- a/index.html
+++ b/index.html
@@ -133,14 +133,14 @@
     <section class="cast">
         <div class="container">
             <div class="tabs">
-                <h2 class="section-title active">Актёры</h2>
+                <h2 class="tab section-title active" data-target="#actors">Актёры</h2>
                 <!-- /.section-title -->
-                <h2 class="section-title">Создатели</h2>
+                <h2 class="tab section-title" data-target="#creators">Создатели</h2>
                 <!-- /.section-title -->
             </div>
             <!-- /.tabs -->
-            <div class="tabs-content">
-                <div class="card">
+            <div class="tabs-content visible" id="actors">
+                <div class=" card">
                     <img src="image/1.png" alt="Carrie Coon" class="card-image">
                     <div class="card-text">
                         <h3 class="name">Кэрри Кун</h3>
@@ -223,6 +223,31 @@
                         <h3 class="name">Финн Вулфард</h3>
                         <!-- /.name -->
                         <div class="span en-name">Finn Wolfhard</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+            </div>
+            <!-- /.tabs-content -->
+            <div class="tabs-content" id="creators">
+                <div class="card">
+                    <img src="image/zhs.jpg" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Евгений Соловьев</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Evgenii Solovev</div>
+                        <!-- /.span en-name -->
+                    </div>
+                    <!-- /.card-text -->
+                </div>
+                <!-- /.card -->
+                <div class="card">
+                    <img src="image/zhn.jpg" alt="Carrie Coon" class="card-image">
+                    <div class="card-text">
+                        <h3 class="name">Анастасия Соловьева</h3>
+                        <!-- /.name -->
+                        <div class="span en-name">Anastasiia Soloveva</div>
                         <!-- /.span en-name -->
                     </div>
                     <!-- /.card-text -->
